# classy-classification

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  individual_transformer.py  pyproject.toml  sentence_transformer.py  setup.cfg  spacy_external_transformer.py  spacy_internal_embeddings.py  spacy_internal_transformer.py  spacy_sentence_transformer.py  test.py  test2.py
.github/workflows/: python-package.yml  python-publish.yml
classy/: __init__.py  classy_sentence_transformer.py  classy_skeleton.py  classy_spacy_external.py  classy_spacy_internal.py
classy_classification/: __init__.py  classy_sentence_transformer.py  classy_skeleton.py  classy_spacy_external.py  classy_spacy_internal.py  test.py
classy_classification/classifiers/: classy_skeleton.py  classy_spacy.py  classy_standalone.py  s.py  sentence_transformer.py  spacy_external.py  spacy_few_shot_external.py  spacy_internal.py  spacy_zero_shot_external.py
classy_classification/examples/: data.py  individual_transformer.py  spacy_external_transformer.py  spacy_few_shot_external.py  spacy_few_shot_external_spans.py  spacy_internal_embeddings.py  spacy_internal_transformer.py  spacy_zero_shot_external.py
tests/: test.py  test_model_configs.py  test_spacy_external.py  test_spacy_external_multi_label.py  test_spacy_external_single_label.py  test_spacy_external_zero_shot.py  test_spacy_internal.py  test_spacy_internal_embeddings.py  test_spacy_internal_multi_label.py  test_spacy_internal_single_label.py  test_standalone.py  test_standalone_multi_label.py  test_standalone_single_class.py  test_standalone_single_label.py
